--- a/package.json
+++ b/package.json
@@ -43,10 +43,13 @@
   "dependencies": {
     "axios": "^0.19.0",
     "compression": "^1.7.3",
+    "connect-mongodb-session": "^2.3.3",
     "connect-session-sequelize": "^6.0.0",
     "express": "^4.16.4",
     "express-session": "^1.15.1",
     "history": "^4.9.0",
+    "mongoose": "^5.9.21",
+    "mongoose-seed": "^0.6.0",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-google-oauth": "^2.0.0",
