--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boilermaker",
+  "name": "capstoneSpotify",
   "version": "2.0.0",
   "description": "Some boilerplate code to get you started - get shakin'!",
   "engines": {
@@ -43,11 +43,9 @@
   "dependencies": {
     "axios": "^0.19.0",
     "compression": "^1.7.3",
-    "connect-mongodb-session": "^2.3.3",
-    "connect-session-sequelize": "^6.0.0",
-    "csvtojson": "^2.0.10",
     "connect-mongo": "^3.2.0",
     "connect-session-sequelize": "^6.0.0",
+    "csvtojson": "^2.0.10",
     "d3": "^5.16.0",
     "express": "^4.16.4",
     "express-session": "^1.15.1",
