--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "express": "^4.16.4",
     "express-session": "^1.15.1",
     "history": "^4.9.0",
+    "moment": "^2.27.0",
     "mongoose": "^5.9.21",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
